# LispPlusPlus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE_3RD_PARTY  Makefile  README.md  gc_sim.c  gc_sim.cpp  sim_cons_factory.cpp  unit_tests.c
build-coverage/: .gitignore  gcov.sh  make.sh
build-debug/: make.sh
build-release/: .gitignore  make.sh
core/: CMakeLists.txt  lisp_cell.cpp  lisp_cell.h  lisp_compile.cpp  lisp_config.h  lisp_cons.h  lisp_cons_factory.cpp  lisp_cons_factory.h  lisp_cons_graph.h  lisp_cons_graph_edge.cpp  lisp_env.h  lisp_object.cpp  lisp_object.h  lisp_opcode.h  lisp_symbol.h  lisp_symbol_factory.cpp  lisp_symbol_factory.h  lisp_type_id.cpp  lisp_vm.cpp  lisp_vm.h  module.mk  test_cons.cpp  test_cons_factory.cpp  test_cons_graph.cpp  test_object.cpp
core/gc/: collectible_container.h  color.h  cons_pages.cpp  cons_pages.h  garbage_collector.cpp  garbage_collector.h  unmanaged_collectible_container.h
core/iterators/: cell_iterator.h  cons_iterator.h
core/types/: cons.h  garbage_collectable.h  lisp_array.h  lisp_atom_type.h  lisp_builtin_function.h  lisp_cons.cpp  lisp_cons.h  lisp_cons_container.h  lisp_function.cpp  lisp_function.h  lisp_managed_type.h  lisp_nil.h  lisp_string.h  lisp_symbol.cpp  lisp_symbol.h  lisp_type_id.cpp  lisp_type_id.h
lisp/core/: CMakeLists.txt  array.c  array.h  cell.c  cell.h  cell_hash_table.c  cell_hash_table.h  cell_iterator.c  cell_iterator.h  complex_object.c  complex_object.h  cons.c  cons.h  error.h  gc.c  gc.h  gc_color.h  gc_color_map.c  gc_color_map.h  gc_iterator.c  gc_iterator.h  gc_stat.c  gc_stat.h  tid.c  tid.h  typedefs.h  vm.c  vm.h
lisp/simul/: CMakeLists.txt  gc_sim.c  gc_sim.h  gc_sim_runner.c  gc_sim_runner.h
lisp/util/: CMakeLists.txt  argparse.c  argparse.h  assertion.c  assertion.h  dl_list.h  hash_table.c  hash_table.h  serialization.c  serialization.h  unit_test.c  unit_test.h  xmalloc.c  xmalloc.h  xstring.h
lpp/core/: CMakeLists.txt  README.txt  cell.cpp  cell.h  cell_data_type.h  compile.cpp  config.h  default_env.cpp  default_env.h  env.h  exception.cpp  exception.h  language_interface.h  lisp_cell.cpp  lisp_cell.h  lisp_compile.cpp  lisp_cons_factory.cpp  lisp_cons_factory.h  lisp_object.cpp  lisp_symbol_factory.h  lisp_vm.cpp  lisp_vm.h  object.cpp  object.h  opcode.h  symbol_factory.cpp  util.cpp  util.h  vm.cpp  vm.h
lpp/core/compiler/: argument_list.h  cons_pattern.cpp  cons_pattern.h  jit.cpp  jit.h  list_pattern.cpp  list_pattern.h  pattern_matcher.h  scope.h  scope_guard.h
lpp/core/compiler/forms/: define.cpp  define.h  lambda.cpp  lambda.h
lpp/core/gc/: basic_collectible_container.h  collectible_container.cpp  collectible_container.h  collectible_edge.h  collectible_graph.cpp  collectible_graph.h  collectible_node.cpp  collectible_node.h  color.h  color_map.h  cons_pages.cpp  cons_pages.h  garbage_collector.cpp  garbage_collector.h  symbol_container.cpp  symbol_container.h  unmanaged_collectible_container.h
lpp/core/iterators/: cell_iterator.h  cons_iterator.h
lpp/core/memory/: allocator.cpp  allocator.h  collectible_container.h  color_map.h  cons_pages.cpp  cons_pages.h  symbol_container.cpp  symbol_container.h  type_container.h  unmanaged_collectible_container.h
lpp/core/types/: array.cpp  array.h  basic_type.h  collectible.h  cons.h  container.h  continuation.cpp  continuation.h  form.cpp  form.h  form_builder.h  function.cpp  function.h  garbage_collectable.h  lisp_array.h  lisp_builtin_function.h  lisp_cons.cpp  lisp_cons_container.h  lisp_function.h  lisp_function_interface.h  lisp_symbol.cpp  lisp_symbol.h  lisp_type_id.h  managed_type.h  polymorphic_container.h  polymorphic_object.h  reference.cpp  reference.h  string.h  symbol.cpp  symbol.h  type.h  type_id.h  type_traits.h
lpp/core/types/forms/: choice_of.cpp  choice_of.h  cons_of.cpp  cons_of.h  define.cpp  define.h  lambda.cpp  lambda.h  list_of.cpp  list_of.h  symbol_eq.cpp  symbol_eq.h  type_of.h
lpp/scheme/: CMakeLists.txt  builder.cpp  builder.h  context.cpp  context.h  function_eval_form.cpp  function_eval_form.h  lambda_form.cpp  lambda_form.h  language.cpp  language.h  procedure_call_arg_decorator.h  procedure_call_form.cpp  procedure_call_form.h  scheme.cpp  scheme.h
lpp/simul/: CMakeLists.txt  collectible_edge.h  collectible_graph.cpp  collectible_graph.h  collectible_node.cpp  gc_sim.h  gc_sim_record.h  gc_sim_runner.h  sim_average.h  sim_member.h  sim_quantile.h  sim_run_statistics.h
sim_cons_factory_data/: README.md  plot_root_010_bulk_010_f_0.0.gp  plot_root_010_bulk_010_f_0.5.gp  plot_root_010_bulk_010_f_1.0.gp  plot_root_010_bulk_100_f_0.0.gp  plot_root_010_bulk_100_f_0.5.gp  plot_root_010_bulk_100_f_1.0.gp  plot_root_100_bulk_1000_f_0.0.gp  plot_root_100_bulk_1000_f_0.5.gp  plot_root_100_bulk_1000_f_1.0.gp  run_root_010_bulk_010_f_0.0.sh  run_root_010_bulk_010_f_0.5.sh  run_root_010_bulk_010_f_1.0.sh  run_root_010_bulk_100_f_0.0.sh  run_root_010_bulk_100_f_0.5.sh  run_root_010_bulk_100_f_1.0.sh  run_root_100_bulk_1000_f_0.0.sh  run_root_100_bulk_1000_f_0.5.sh  run_root_100_bulk_1000_f_1.0.sh
simul/: CMakeLists.txt  gc_sim.h  lisp_cons_graph.cpp  lisp_cons_graph.h  lisp_cons_graph_edge.cpp  lisp_cons_graph_edge.h  lisp_cons_graph_node.cpp  lisp_cons_graph_node.h  lisp_sim_cons_factory.cpp  lisp_sim_cons_factory.h  lisp_sim_cons_factory_record.cpp  lisp_sim_cons_factory_record.h
src/core/: lisp_vm.h  (+25 more)
test_core/: test_builtin_function.cpp  test_collectible_container.cpp  test_compile_eval.cpp  test_cons.cpp  test_cons_factory.cpp  test_cons_iterator.cpp  test_cons_pages.cpp  test_env.cpp  test_function.cpp  test_garbage_collector.cpp  test_integer.cpp  test_object.cpp  test_random_access_iterator.h  test_string.cpp  test_symbol_container.cpp  test_symbol_factory.cpp  test_type_container.cpp  test_util.cpp  test_vm.cpp
test_core2/: CMakeLists.txt  array.c  cell.c  common.h  cons.c  gc.c  vm.c
test_scheme/: language.cpp  scheme.cpp
test_simul/: test_cons_graph.cpp  test_gc_sim.cpp
test_util/: CMakeLists.txt  dl_list.c
unit_tests/: CMakeLists.txt  common.h  unit_tests.c
(+26 files in other folders)
